--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ a {
     position: relative;
     width: 200px;
     height: 40px;
-    background-color: blue;
+    background-color: rgb(0, 0, 255);
     color: white;
     border-radius: 5px;
     text-decoration: none;
